plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.openjfx:javafx-controls:23.0.1'
    implementation 'org.openjfx:javafx-fxml:23.0.1'
    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
}

application {
    mainClass = 'com.ecole_primaire.HomeController'
}

javafx {
    version = "23.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE // Skips duplicate entries
    manifest {
        attributes(
            'Main-Class': 'com.ecole_primaire.HomeController'
        )
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

tasks.withType(JavaExec).configureEach {
    jvmArgs = [
        '--module-path', classpath.asPath, // Use Gradle's classpath
        '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}
shadowJar {
    archiveBaseName.set('ecole_primare') // Set the JAR name
    archiveVersion.set('1.0.0')          // Set version
    mergeServiceFiles() // Merge service files like META-INF/services

    manifest {
        attributes(
            'Main-Class': 'com.ecole_primaire.HomeController'
        )
    }
}

